<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="265dp"
                android:layout_height="129dp"
                android:layout_centerInParent="true"
                android:background="@drawable/logo"


                 />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_horizontal_login"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/editTextColorWhite"
                android:textColorHint="@color/editTextColorWhite"
                app:boxStrokeColor="@color/editTextColorWhite">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"

                     />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:textColor="@color/editTextColorWhite"
                android:textColorHint="@color/editTextColorWhite"
                app:boxStrokeColor="@color/editTextColorWhite">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_button_login"
                android:theme="@style/RaisedButtonDark" />



         <RelativeLayout
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

              <TextView
                  android:id="@+id/dontHaveAccount"
                  android:text="@string/dont_have_account"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@android:color/white"
                  android:textStyle="bold"
                  android:textSize="@dimen/textsize_donthaveaccount"
                  />

          <TextView
              android:id="@+id/createHere"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/create_here"
              android:textColor="@android:color/white"
              android:textSize="@dimen/textsize_donthaveaccount"
              android:textStyle="bold"
              android:layout_toRightOf="@+id/dontHaveAccount"
              android:onClick="goCreateAccount"
              />


         </RelativeLayout>


        </LinearLayout>


        </ScrollView>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>