<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:id="@+id/pictureCard_cardview"
    android:layout_marginBottom="@dimen/cardView_marginBottom"
    app:cardCornerRadius="@dimen/cardview_cornerRadius"
    android:layout_height="@dimen/height_cardview">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/PictureCard"
            android:scaleType="centerCrop"
            android:background="@drawable/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"/>


        <LinearLayout
            android:background="@color/backGroundText_card"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize_userName_card"
                android:text="@string/userName_card"
                android:id="@+id/userNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/fistWord_textSize_card"
                    android:textColor="@android:color/white"
                    android:id="@+id/firstWord"
                    android:text="@string/firsWord_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginLeft="@dimen/timeCard_marginLeft_card"
                    android:textSize="@dimen/fistWord_textSize_card"
                    android:id="@+id/timeCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeCard_card"
                    android:textColor="@android:color/white" />


            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="@dimen/like_marginTop_margin_card"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <CheckBox

                    android:button="@drawable/checkbox_selector"
                    android:id="@+id/likeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginLeft="@dimen/timeCard_marginLeft_card"
                    android:textSize="@dimen/fistWord_textSize_card"
                    android:id="@+id/likeNumberCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likeNumberCard_card"
                    android:textColor="@android:color/white" />

            </LinearLayout>







        </LinearLayout>

    </FrameLayout>







</androidx.cardview.widget.CardView>


